// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create program should post a program: Create program response for program: CBE Program 1`] = `
{
  "allowEmptyPhoneNumber": false,
  "budget": null,
  "currency": "ETB",
  "description": {
    "en": "Test program using Commercial Bank of Ethiopia FSP",
  },
  "distributionDuration": 3,
  "distributionFrequency": "month",
  "editableAttributes": [
    {
      "isRequired": false,
      "label": {
        "am": "እድሜ",
        "en": "Age",
      },
      "name": "age",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Bank Account Number",
      },
      "name": "bankAccountNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "am": "ስም",
        "en": "Name",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "am": "ጾታ",
        "en": "Gender",
      },
      "name": "gender",
      "type": "dropdown",
    },
    {
      "isRequired": false,
      "label": {
        "am": "የመታውቂያ ቁጥር",
        "en": "ID Card number",
      },
      "name": "idNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "am": "ስልክ ቁጥር",
        "en": "Phone number",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
  ],
  "enableMaxPayments": true,
  "enableScope": false,
  "filterableAttributes": [
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "lastMessageStatus",
        },
      ],
      "group": "messages",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "age",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "bankAccountNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "fullName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "gender",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "idNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "inclusionScore",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "paymentAmountMultiplier",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "personAffectedSequence",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "phoneNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "preferredLanguage",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "programFspConfigurationName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "referenceId",
        },
      ],
      "group": "paAttributes",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "maxPayments",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "paymentCount",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "paymentCountRemaining",
        },
      ],
      "group": "payments",
    },
  ],
  "fixedTransferValue": 7000,
  "fullnameNamingConvention": [
    "fullName",
  ],
  "id": 5,
  "languages": [
    "en",
    "am",
  ],
  "location": "Ethiopia",
  "monitoringDashboardUrl": null,
  "ngo": "NGO",
  "paTableAttributes": [
    {
      "isRequired": false,
      "label": {
        "am": "እድሜ",
        "en": "Age",
      },
      "name": "age",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Bank Account Number",
      },
      "name": "bankAccountNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "am": "ስም",
        "en": "Name",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "am": "ጾታ",
        "en": "Gender",
      },
      "name": "gender",
      "type": "dropdown",
    },
    {
      "isRequired": false,
      "label": {
        "am": "የመታውቂያ ቁጥር",
        "en": "ID Card number",
      },
      "name": "idNumber",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "am": "ስልክ ቁጥር",
        "en": "Phone number",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
  ],
  "paymentAmountMultiplierFormula": null,
  "programRegistrationAttributes": [
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 29,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "am": "እድሜ",
        "en": "Age",
      },
      "name": "age",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 31,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "Bank Account Number",
      },
      "name": "bankAccountNumber",
      "options": null,
      "pattern": ".+",
      "placeholder": {
        "en": "Please type your bank account number",
      },
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": true,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 26,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "am": "ስም",
        "en": "Name",
      },
      "name": "fullName",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 30,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "am": "ጾታ",
        "en": "Gender",
      },
      "name": "gender",
      "options": [
        {
          "label": {
            "am": "ወንድ",
            "en": "Male",
          },
          "option": "male",
        },
        {
          "label": {
            "am": "ሴት",
            "en": "Female",
          },
          "option": "female",
        },
      ],
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "dropdown",
    },
    {
      "duplicateCheck": true,
      "editableInPortal": true,
      "id": 28,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "am": "የመታውቂያ ቁጥር",
        "en": "ID Card number",
      },
      "name": "idNumber",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": false,
      "id": 27,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "am": "ስልክ ቁጥር",
        "en": "Phone number",
      },
      "name": "phoneNumber",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 5,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "tel",
    },
  ],
  "targetNrRegistrations": 250,
  "titlePortal": {
    "en": "CBE Program",
  },
  "tryWhatsAppFirst": false,
  "validation": false,
}
`;

exports[`Create program should post a program: Create program response for program: NLRC OCW program 1`] = `
{
  "allowEmptyPhoneNumber": false,
  "budget": null,
  "currency": "EUR",
  "description": {
    "en": "This is the OCW program.",
  },
  "distributionDuration": 46,
  "distributionFrequency": "2-weeks",
  "editableAttributes": [
    {
      "isRequired": false,
      "label": {
        "en": "Address city",
      },
      "name": "addressCity",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number",
      },
      "name": "addressHouseNumber",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number addition",
      },
      "name": "addressHouseNumberAddition",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address postal code",
      },
      "name": "addressPostalCode",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address street",
      },
      "name": "addressStreet",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Full Name",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
    {
      "isRequired": false,
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "type": "tel",
    },
  ],
  "enableMaxPayments": false,
  "enableScope": false,
  "filterableAttributes": [
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "lastMessageStatus",
        },
      ],
      "group": "messages",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "addressCity",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "addressHouseNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "addressHouseNumberAddition",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "addressPostalCode",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "addressStreet",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "fullName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "inclusionScore",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "paymentAmountMultiplier",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "personAffectedSequence",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "phoneNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "preferredLanguage",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "programFspConfigurationName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "referenceId",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
            "$not",
          ],
          "isInteger": false,
          "name": "whatsappPhoneNumber",
        },
      ],
      "group": "paAttributes",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$null",
            "$gt",
            "$lt",
            "$btw",
            "$not",
          ],
          "isInteger": true,
          "name": "paymentCount",
        },
      ],
      "group": "payments",
    },
  ],
  "fixedTransferValue": 25,
  "fullnameNamingConvention": [
    "fullName",
  ],
  "id": 4,
  "languages": [
    "en",
    "nl",
    "ar",
    "tr",
  ],
  "location": "Nederland",
  "monitoringDashboardUrl": "https://app.powerbi.com/view?r=eyJrIjoiNDkxN2Q1NmEtOWIxOC00ZTYyLTkxMTMtYmI3MmE4YTVkMTE2IiwidCI6ImEyYjUzYmU1LTczNGUtNGU2Yy1hYjBkLWQxODRmNjBmZDkxNyIsImMiOjh9",
  "ngo": "NLRC",
  "paTableAttributes": [
    {
      "isRequired": false,
      "label": {
        "en": "Address city",
      },
      "name": "addressCity",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number",
      },
      "name": "addressHouseNumber",
      "type": "numeric",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address house number addition",
      },
      "name": "addressHouseNumberAddition",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address postal code",
      },
      "name": "addressPostalCode",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Address street",
      },
      "name": "addressStreet",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Full Name",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "isRequired": false,
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
    {
      "isRequired": false,
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "type": "tel",
    },
  ],
  "paymentAmountMultiplierFormula": null,
  "programRegistrationAttributes": [
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 25,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "Address city",
      },
      "name": "addressCity",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 22,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "Address house number",
      },
      "name": "addressHouseNumber",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "numeric",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 23,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "Address house number addition",
      },
      "name": "addressHouseNumberAddition",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 24,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "Address postal code",
      },
      "name": "addressPostalCode",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 21,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "Address street",
      },
      "name": "addressStreet",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "editableInPortal": true,
      "id": 18,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "Full Name",
      },
      "name": "fullName",
      "options": null,
      "pattern": null,
      "placeholder": null,
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": true,
      "editableInPortal": true,
      "id": 19,
      "includeInTransactionExport": false,
      "isRequired": false,
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "options": null,
      "pattern": null,
      "placeholder": {
        "en": "+31 6 00 00 00 00",
      },
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": false,
      "type": "tel",
    },
    {
      "duplicateCheck": true,
      "editableInPortal": true,
      "id": 20,
      "includeInTransactionExport": true,
      "isRequired": false,
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "options": null,
      "pattern": null,
      "placeholder": {
        "ar": "00 00 00 00 0 00+",
        "en": "+00 0 00 00 00 00",
      },
      "programId": 4,
      "scoring": {},
      "showInPeopleAffectedTable": true,
      "type": "tel",
    },
  ],
  "targetNrRegistrations": 100000,
  "titlePortal": {
    "en": "NLRC OCW program",
  },
  "tryWhatsAppFirst": true,
  "validation": false,
}
`;
